--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web
     codegen:
-        defaultPackage: resume
+        defaultPackage: ResumeNick
     spring:
         transactionManagement:
             proxies: false
@@ -96,10 +96,15 @@ dataSource:
     password:
 
 environments:
+#    development:
+#        dataSource:
+#            dbCreate: create-drop
+#            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    # Changing the development dataSource parameters enables persistence with Hibernate
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: update
+            url:  jdbc:h2:./devDB
     test:
         dataSource:
             dbCreate: update
