--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,38 @@
 buildscript {
+    ext {
+        grailsVersion = project.grailsVersion
+    }
     repositories {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
+//        maven {
+////            url "https://plugins.gradle.org/m2/"
+//        }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.6"
-        classpath "org.grails.plugins:hibernate5:6.0.4"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.8.2"
+        classpath "org.grails.plugins:hibernate4:5.0.10"
+        classpath "com.moowork.gradle:gradle-node-plugin:0.13"
     }
 }
 
-version "0.1"
-group "resume"
 
-apply plugin:"eclipse"
-apply plugin:"idea"
+version "0.1"
+group "AuthenticationTutorial"
+
+apply plugin: "eclipse"
+apply plugin: "idea"
 apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.grails-gsp"
 apply plugin:"asset-pipeline"
+apply plugin: "com.moowork.node"
+
+ext {
+    grailsVersion = project.grailsVersion
+    gradleWrapperVersion = project.gradleWrapperVersion
+}
 
 repositories {
     mavenLocal()
@@ -42,25 +56,37 @@ dependencies {
     compile "org.grails:grails-web-boot"
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:scaffolding"
+    compile 'org.grails.plugins:spring-security-core:3.1.1'
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.1.2.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
-    console "org.grails:grails-console"
+    compile "org.grails.plugins:grails-spring-websocket:2.3.0"
+    compile 'rpalcolea.gravatar:gravatar:1.0.2'
+
     profile "org.grails.profiles:web"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
+
+    runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.8.2"
     runtime "com.h2database:h2"
+    runtime 'org.grails.plugins:ajax-tags:1.0.0.RC1'
+
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
+
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
-}
 
+   // compile "org.grails.plugins:spring-security-core:3.1.1"
+    compile("org.grails.plugins:spring-security-rest:2.0.0.M2")
+    compile "org.twitter4j:twitter4j-core:4.0.4"
+}
 bootRun {
-    jvmArgs('-Dspring.output.ansi.enabled=always')
+    jvmArgs = ['-Dspring.output.ansi.enabled=always']
 }
-
 
 assets {
     minifyJs = true
     minifyCss = true
 }
+
+processResources.dependsOn(['npmInstall', 'npm_run_bundle'])
+assetCompile.dependsOn(['npmInstall', 'npm_run_bundle'])
