--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,8 +1,56 @@
 ---
+hibernate:
+    cache:
+        queries: false
+        use_second_level_cache: true
+        use_query_cache: false
+        region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
+
+dataSource:
+    pooled: true
+    jmxExport: true
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+
+environments:
+    development:
+        dataSource:
+            dbCreate: create-drop
+            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    test:
+        dataSource:
+            dbCreate: update
+            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    production:
+        dataSource:
+            dbCreate: update
+            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            properties:
+                jmxEnabled: true
+                initialSize: 5
+                maxActive: 50
+                minIdle: 5
+                maxIdle: 25
+                maxWait: 10000
+                maxAge: 600000
+                timeBetweenEvictionRunsMillis: 5000
+                minEvictableIdleTimeMillis: 60000
+                validationQuery: SELECT 1
+                validationQueryTimeout: 3
+                validationInterval: 15000
+                testOnBorrow: true
+                testWhileIdle: true
+                testOnReturn: false
+                jdbcInterceptors: ConnectionState
+                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+---
+---
 grails:
     profile: web
     codegen:
-        defaultPackage: resume
+        defaultPackage: grails3.example
     spring:
         transactionManagement:
             proxies: false
@@ -12,12 +60,9 @@ info:
         version: '@info.app.version@'
         grailsVersion: '@info.app.grailsVersion@'
 spring:
-    main:
-        banner-mode: "off"
     groovy:
         template:
             check-template-location: false
-
 # Spring Actuator Endpoints are Disabled by Default
 endpoints:
     enabled: false
@@ -81,12 +126,71 @@ endpoints:
         unique-names: true
 
 ---
+grails:
+    plugin:
+        springsecurity:
+            securityConfigType: 'Annotation'
+            filterChain:
+                chainMap:
+                    - pattern: '/api/signup'
+                      filters: 'anonymousAuthenticationFilter,restExceptionTranslationFilter'
+
+                    - pattern: '/api/**'
+                      filters: 'JOINED_FILTERS,-anonymousAuthenticationFilter,-exceptionTranslationFilter,-authenticationProcessingFilter,-securityContextPersistenceFilter,-rememberMeAuthenticationFilter'
+
+                    - pattern: '/**'
+                      filters: 'anonymousAuthenticationFilter,restExceptionTranslationFilter'
+
+            rest:
+                token:
+                    validation:
+                        enableAnonymousAccess: true
+
+            userLookup:
+                userDomainClassName: 'grails3.example.User'
+                authorityJoinClassName: 'grails3.example.UserRole'
+                usernamePropertyName: 'userName'
+            authority:
+                className: 'grails3.example.Role'
+            logout:
+                postOnly: false
+            controllerAnnotations:
+                staticRules:
+                                - pattern: '/'
+                                  access: ['permitAll']
+                                - pattern: '/error'
+                                  access: ['permitAll']
+                                - pattern: '/index'
+                                  access: ['permitAll']
+                                - pattern: '/index.gsp'
+                                  access: ['permitAll']
+                                - pattern: '/shutdown'
+                                  access: ['permitAll']
+                                - pattern: '/assets/**'
+                                  access: ['permitAll']
+                                - pattern: '/**/js/**'
+                                  access: ['permitAll']
+                                - pattern: '/**/css/**'
+                                  access: ['permitAll']
+                                - pattern: '/**/images/**'
+                                  access: ['permitAll']
+                                - pattern: '/**/favicon.ico'
+                                  access: ['permitAll']
+                                - pattern: '/updateStatus'
+                                  access: ['permitAll']
+                                - pattern: '/unfollow/*'
+                                  access: ['permitAll']
+                                - pattern: '/follow/*'
+                                  access: ['permitAll']
+                                - pattern: '/stomp/**'
+                                  access: ['permitAll']
+
+---
 hibernate:
     cache:
-        queries: false
-        use_second_level_cache: true
-        use_query_cache: false
-        region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
+       queries: false
+       use_second_level_cache: false
+       use_query_cache: false
 
 dataSource:
     pooled: true
@@ -98,19 +202,16 @@ dataSource:
 environments:
     development:
         dataSource:
-             dbCreate: update
-             url:  jdbc:h2:./devDB
-            #dbCreate: create-drop
-            #url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-
+            dbCreate: create-drop
+            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
             dbCreate: update
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
         dataSource:
-            dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: update
+            url: jdbc:h2:prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
             properties:
                 jmxEnabled: true
                 initialSize: 5
@@ -129,3 +230,4 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
